--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ material3Version = "1.2.0"
 navigationCompose = "2.8.5"
 navigationComposeVersion = "2.7.5"
 okhttp = "4.10.0"
+playServicesAuth = "20.7.0"
 retrofitVersion = "2.9.0"
 compose = "1.7.6"
 material3-compose = "1.3.1"
@@ -66,6 +67,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 #material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
